# competency-library

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: allup-graphql.md
.claude/skills/allup-graphql/: SKILL.md
.claude/skills/allup-graphql/reference/: analysis.md  assets.md  config.md  jobs.md  media_pipeline.md  notifs.md  ops.md  prompts.md  python-template.py.txt  scripting.md  search.md  social_graph.md  users.md
datasets/: README.md
datasets/processed/: esco-skill-groups.json  onet-abilities.json  onet-content-model.json  onet-knowledge.json  onet-skills.json  onet-tech-skills.json  onet-unspsc.json  onet-work-activities.json  onet-work-styles.json  opm-competencies.json  workbank-tasks.json
docs/: decisions.md  research-index.md
docs/research/: 2026-03-12-allup-data-pull-plan.md  assessment-methods.md
src/: lib.rs  main.rs
src/datasets/: esco.rs  lightcast.rs  mod.rs  onet.rs  opm.rs  workbank.rs
src/scoring/: fetch.rs  mod.rs  runner.rs
tools/: explore_scoring.py  fetch_allup_data.py
ui/: README.md  package.json
ui/src/lib/: data.server.ts  types.ts
ui/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
ui/src/routes/prompts/: +page.server.ts  +page.svelte
ui/src/routes/scoring/: +page.server.ts  +page.svelte
ui/src/routes/skills/: +page.server.ts  +page.svelte
ui/src/routes/tags/: +page.server.ts  +page.svelte
ui/src/routes/taxonomy/: +page.server.ts  +page.svelte
ui/src/routes/transcripts/: +page.server.ts  +page.svelte
ui/src/routes/users/: +page.server.ts  +page.svelte
(+6 files in other folders)
