[package]
name = "competency-library"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
csv = "1"
calamine = "0.26"
zip = "2"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1"
